--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="login-total">
         <div class="direita-login">
         <h1>Venha Tudo Novo<br> Se o seu sentido da visão não funcionou, você pode confiar em seus outros sentidos. </h1>
-        <img src="matematica.svg" alt="matematica animação">
+        <img src="matematica.svg" alt="matematica animação" width="300" height="300">
         </div>
         <div class="esquerda-login">
           <div class="login-card">
