--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-total">
         <div class="direita-login">
-        <h1>Venha Tudo Novo<br> Se o seu sentido da visão não funcionou, você pode confiar em seus outros sentidos. </h1>
+        <h1>Se o seu sentido da visão não funcionou, você pode confiar em seus outros sentidos. </h1>
         <img src="matematica.svg" alt="matematica animação" width="300" height="300">
         </div>
         <div class="esquerda-login">
